syntax = "proto3";

option java_package = "ru.kpfu.itis.documentservice.proto";
option java_multiple_files = true;


service DocumentService {
  rpc getDocumentsByUserId(UserRequest) returns (UserResponse) {}
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  repeated string documents = 1;
}